# gen

./: .gitignore  .gitmodules  CMakeLists.txt  board.cpp  conanfile.txt
cmake/: CheckConan.cmake  ConanInstallDependencies.cmake  SetProjectTargetName.cmake
include/: files.h  logger.h  timefunc.h
include/datamanager/: datamanager.h  typesproxy.h
src/: CMakeLists.txt  board.cpp  board.h  comaexception.cpp  comaexception.h  configv.h  datamanager.cpp  datamanager.h  datarecv.h  datatypes.h  delegate_check.h  delegate_widget.h  error.cpp  error.h  errorqueue.cpp  errorqueue.h  files.cpp  files.h  gen_export.h  helper.cpp  helper.h  logclass.cpp  logclass.h  logger.cpp  logger.h  modules.h  registers.h  s2.h  settings.h  singleton.h  stdfunc.cpp  stdfunc.h  timefunc.cpp  timefunc.h  uint24.cpp  uint24.h  xmlparser.cpp
src/cmake/: CheckConan.cmake  xz.cmake
src/datamanager/: datamanager.cpp  typesproxy.cpp
src/files/: files.cpp  files.h  lzma_stream.cpp  lzma_stream.h  lzma_util.cpp  lzma_util.h  xz.cpp  xz.h
src/settings/: interfacesettings.h  modbussettings.cpp  settings.h  usbhidsettings.h
src/utils/: convertable.cpp  crc16.cpp  crc32.cpp
src/xmlparse/: interfaceparser.cpp  interfaceparser.h  xmlparser.cpp  xmlparser.h
tests/: CMakeLists.txt  binary_file_tests.cpp  gen_test_class.cpp  gen_test_class.h  stdfunc_tests.cpp
